--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <link href="./src/resources/pitchpoa.svg" rel="icon" type="image/svg+xml" />
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="PitchPoa AI - Turn every pitch into profit with AI-powered sales training for African vendors and entrepreneurs. WhatsApp integration, multilingual support." />
     <meta name="keywords" content="AI sales training, African entrepreneurs, WhatsApp AI, sales coaching, pitch training, small business" />
